--- a/demos.html
+++ b/demos.html
@@ -5,13 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <style>
-    button{
-      border: 1px solid #ccc;
-    }
-  </style>
 </head>
 <body>
-  <button>按钮</button>
+  <script>
+    const fn =function(){
+      console.log(obj.a)
+    }  
+    const obj ={
+      a:'aa'
+    }
+    fn();
+  </script>
 </body>
 </html>
